service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gamukartapp-service
spec:
  selector:
    app: gamukartapp
  type: NodePort
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 3000
    nodePort: 31110
