ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gamukart-ingress
spec:
  defaultBackend:
    service:
      name: gamukartapp
      port:
        number: 3000
